# board

./: .gitignore  README.md
core/: Cargo.toml  package.json
core/src/: error.rs  lib.rs  state.rs
core/src/elements/: relative.rs
core/src/entity/: comosition.rs  component.rs  connection.rs  mod.rs  port.rs
core/src/entity/dummy/: comosition.rs  component.rs  mod.rs  port.rs
core/src/render/: mod.rs  options.rs  ratio.rs  representation.rs
core/src/render/elements/: border.rs  mod.rs  relative.rs
core/src/render/entity/: comosition.rs  component.rs  connection.rs  mod.rs  port.rs
core/src/render/form/: button.rs  grid_rectangle.rs  label.rs  mod.rs  path.rs  rectangle.rs
core/src/render/grid/: mod.rs
core/src/render/style/: mod.rs
core/src/representation/: mod.rs
core/src/representation/form/: mod.rs  path.rs  rectangle.rs
core/src/representation/style/: mod.rs
lib/: build.sh  package.json  tsconfig.json
lib/src/: connection.ts  dom.ts  hover.ts  lib.ts  position.ts  scrollbars.ts  subscriber.ts  types.ts  zoomlabel.ts
playground/: package.json  tsconfig.json  webpack.config.js
playground/src/: main.ts
sandbox/: package.json  start.sh  tsconfig.json  webpack.config.js
sandbox/src/: dummy.ts  loader.ts  main.ts  types.ts
