[package]
name = "board-core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
rand = "0.8"
thiserror = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
num-traits = "0.2"
bincode = "1.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'TextMetrics',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console'
]

[dependencies.getrandom]
version = "0.2"
features = [
  'js',
]
